# representativity

./: .gitignore  Dockerfile  README.md  conftest.py  exceptions.py  logs.py  main.py  pyproject.toml  services.py
.github/workflows/: pipeline.yml
artifacts/: dataset_10_000_samples_10_features.json  dataset_1_000_samples_5_features.json  generate.py  samples_10_features.json  samples_5_features.json
data/extractors/: __init__.py  representativeness.py
data/models/: __init__.py  dataset.py  sample.py
data/processors/: __init__.py  dataset.py
ml/helpers/: __init__.py  experiment_tracking.py
ml/models/: __init__.py  regressors.py
tests/: test_api.py  test_dataset.py  test_dataset_processor.py  test_experiment_tracking.py  test_regressors.py  test_representativeness_extractor.py  test_sample.py
