[tool.poetry]
name = "Rrepresentativity Service"
version = "0.1.0"
description = ""
authors = ["Smendowski <m.smendowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pytest = "^7.3.1"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
httpx = "^0.24.1"

[tool.pytest]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
